--- a/application/package.json
+++ b/application/package.json
@@ -12,6 +12,7 @@
     "expo": "^31.0.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-31.0.0.tar.gz",
+    "react-native-router-flux": "^4.0.6",
     "react-native-woodpicker": "0.0.12"
   },
   "devDependencies": {
